name:                ln-validate
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/adarqui/ln-validate#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LN.Validate
                     , LN.Validate.Internal
                     , LN.Validate.Organization
                     , LN.Validate.User
                     , LN.Generate
                     , LN.Generate.Internal
                     , LN.Generate.Organization
                     , LN.Generate.User
  build-depends:       base
                     , QuickCheck
                     , quickcheck-text
                     , string-conversions
                     , text
                     , transformers

                     , haskell-ifte
                     , ln-sanitize
                     , ln-types
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

test-suite ln-validate-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec

                     , ln-validate
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/ln-validate
