cabal-version:       2.2
name:                lnforum-validate
version:             0.1.0.7
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/adarqui/lnforum-validate#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Development
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     LN.Validate
                     , LN.Validate.Forum
                     , LN.Validate.Board
                     , LN.Validate.Internal
                     , LN.Validate.Thread
                     , LN.Validate.ThreadPost
                     , LN.Validate.User
                     , LN.Generate
                     , LN.Generate.Board
                     , LN.Generate.Default
                     , LN.Generate.Internal
                     , LN.Generate.Permission
                     , LN.Generate.Thread
                     , LN.Generate.ThreadPost
                     , LN.Generate.User
  build-depends:       base
                     , QuickCheck
                     , quickcheck-text
                     , string-conversions
                     , text
                     , time
                     , transformers
                     , haskell-ifte
                     , lnforum-sanitize
                     , lnforum-types-gen
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

test-suite lnforum-validate-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LN.Validate.UserSpec
  build-depends:       base
                     , hspec
                     , text
                     , lnforum-types-gen
                     , lnforum-validate
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/lnforum-validate
